--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,7 +51,7 @@ website:
         contents:
           - week-01/01-introduction.qmd
 
-      - section: "Week 2 1/23-1/24"
+      - section: "Week 2 1/23, 1/25"
         contents:
           - week-02/files-dirs.qmd
       
