--- a/_quarto.yml
+++ b/_quarto.yml
@@ -55,3 +55,6 @@ website:
         contents:
           - week-02/files-dirs.qmd
       
+      - section: "Week 3 1/30, 2/01"
+        contents:
+          - week-03/python_intro.ipynb
