--- a/_quarto.yml
+++ b/_quarto.yml
@@ -98,11 +98,10 @@ website:
         contents:
           - week-11/04_local_spatial_autocorrelation.ipynb
           - week-11/index.qmd
-
- 
       - section: "Week 12 4/09, 4/11"
         contents:
           - week-12/point-patterns.qmd
+          - week-12/centrography.qmd
       - section: "Week 13 4/16 4/18"
       - section: "Week 14 4/23 4/25"
         contents:
